<resources>
    <string name="app_name">RobotRemote</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="increaseAlt">Increase Altitude</string>
    <string name="decreaseAlt">Decrease Altitude</string>
    <string name="connect">Connect</string>
    <string name="gpsmenu">GPS Menu</string>
    <string name="disconnect">Disconnect</string>
    <string name="forward">forward</string>
    <string name="rightFor">forward right</string>
    <string name="leftFor">forward left</string>
    <string name="left">left</string>
    <string name="stop">stop</string>
    <string name="right">right</string>
    <string name="rightBack">back right</string>
    <string name="back">back</string>
    <string name="leftBack">back left</string>
    <string name="log">Log Text</string>
    <string name="readout">Control Readout</string>
    <string name="manual">Manual Control</string>
    <string name="title_activity_location_list">LocationListActivity</string>
    <string name="fayard">Fayard Hall</string>
    <string name="library">Library</string>
    <string name="union">Union</string>
    <string name="stadium">Strawberry Stadium</string>
    <string name="bearing">bearing, distance</string>
    <string-array name="Locations">
        <item>Anzalone</item>
        <item>DVic</item>
        <item>Fayard</item>
        <item>Katrina Fountain</item>
        <item>Library</item>
        <item>Union East</item>
        <item>Union West</item>
    </string-array>
</resources>
